--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -15,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TpFinalTUSI"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:hardwareAccelerated="true">
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -36,27 +42,33 @@
             android:name=".activities.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps"
-            android:theme="@style/MainThemeWhite"/>
+            android:theme="@style/MainThemeWhite"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.DetalleNoticia"
             android:exported="false"
-            android:theme="@style/MainThemeWhite" />
+            android:theme="@style/MainThemeWhite"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.HomeActivity"
             android:exported="false"
-            android:theme="@style/MainThemeWhite" />
+            android:theme="@style/MainThemeWhite"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.Registro"
             android:exported="false"
-            android:theme="@style/MainThemeWhite" />
+            android:theme="@style/MainThemeWhite"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.Login"
             android:exported="false"
-            android:theme="@style/MainThemeWhite" />
+            android:theme="@style/MainThemeWhite"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
