--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_person_recycling_2"
+        android:icon="@mipmap/ic_logo"
+        android:roundIcon="@mipmap/ic_logo"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TpFinalTUSI"
         tools:targetApi="31"
-        android:hardwareAccelerated="true">
+        android:hardwareAccelerated="true"
+        tools:replace="android:allowBackup">
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
