--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -14,16 +14,20 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_logo"
-        android:roundIcon="@mipmap/ic_logo"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
+        android:roundIcon="@mipmap/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.TpFinalTUSI"
-        tools:targetApi="31"
-        android:hardwareAccelerated="true"
-        tools:replace="android:allowBackup">
-
+        tools:replace="android:allowBackup"
+        tools:targetApi="31">
+        <activity
+            android:name=".activities.OlvidePassword"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/MainThemeWhite"/>
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -38,41 +42,43 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
+
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
-            tools:replace="screenOrientation" />
+            tools:replace="screenOrientation"
+            />
         <activity
             android:name=".activities.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps"
-            android:theme="@style/MainThemeWhite"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/MainThemeWhite" />
         <activity
             android:name=".activities.DetalleNoticia"
             android:exported="false"
-            android:theme="@style/MainThemeWhite"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/MainThemeWhite" />
         <activity
             android:name=".activities.HomeActivity"
             android:exported="false"
-            android:theme="@style/MainThemeWhite"
-            android:screenOrientation="sensorPortrait"/>
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/MainThemeWhite" />
         <activity
             android:name=".activities.Registro"
             android:exported="false"
-            android:theme="@style/MainThemeWhite"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/MainThemeWhite" />
         <activity
             android:name=".activities.Login"
             android:exported="false"
-            android:theme="@style/MainThemeWhite"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/MainThemeWhite" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
-            android:theme="@style/SplashTheme"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
