--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,17 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
+            android:name=".activities.activity_canjear_puntos"
+            android:exported="false"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/MainThemeWhite"
+            android:label="Canjear_Puntos"/>
+        <activity
             android:name=".activities.OlvidePassword"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/MainThemeWhite"/>
+            android:theme="@style/MainThemeWhite"
+            />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -39,15 +46,10 @@
              project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
-
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
-            tools:replace="screenOrientation"
-            />
+            tools:replace="screenOrientation" />
         <activity
             android:name=".activities.MapsActivity"
             android:exported="false"
