--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         tools:targetApi="31">
         <activity
             android:name=".adicionales.activity_canje_exitoso"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/MainThemeWhite" />
         <activity
             android:name=".activities.activity_canjear_puntos"
             android:exported="false"
