--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -29,7 +28,13 @@
         tools:replace="android:allowBackup"
         tools:targetApi="31">
         <activity
-            android:name=".adicionales.activity_canje_exitoso"
+            android:name=".activities.CrearNoticia"
+            android:exported="false" />
+        <activity
+            android:name=".activities.DetalleNoticiaAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".activities.activity_canje_exitoso"
             android:exported="false"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/MainThemeWhite" />
@@ -90,7 +95,8 @@
             android:exported="false"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/MainThemeWhite" />
-        <activity android:name=".activities.DetalleReporteAdmin"
+        <activity
+            android:name=".activities.DetalleReporteAdmin"
             android:exported="false"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/MainThemeWhite" />
@@ -111,6 +117,7 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
