--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,12 @@
             android:screenOrientation="sensorPortrait"
             android:theme="@style/MainThemeWhite" />
         <activity
+            android:name=".activities.GraficoContaminacion"
+            android:exported="false"
+            android:label="Grafico de Contaminacion"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/MainThemeWhite" />
+        <activity
             android:name=".activities.OlvidePassword"
             android:exported="false"
             android:screenOrientation="portrait"
