--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,14 @@
             android:theme="@style/MainThemeWhite" />
         <activity
             android:name=".activities.CrearNoticia"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/MainThemeWhite"/>
         <activity
             android:name=".activities.DetalleNoticiaAdmin"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/MainThemeWhite"/>
         <activity
             android:name=".activities.activity_canje_exitoso"
             android:exported="false"
